# website

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  Makefile  README.md  beat-entrypoint.sh  docker-compose.prod.yml  docker-compose.stage.yml  docker-compose.yml  entrypoint.prod.sh  entrypoint.sh  pyproject.toml  worker-entrypoint.sh
.github/workflows/: deployment.yml
blog/: models.py  tasks.py  tests.py  urls.py  utils.py  views.py
blog/migrations/: 0001_initial.py
blog/static/blog/css/: screen.css  styles.css
blog/static/blog/css/sass/: blog.css  cloudcannon.css  elements.css  forms.css  layout.css  navigation.css  pygment.css  recipes.css  sidebar.css  variables.css
blog/static/blog/js/: katex.js
blog/static/blog/post_content/machine-learning-notes-1a-what-is-machine-learning/: categories_of_ml.py  categories_of_ml_2.py  polynomial_regression.py  residuals.py
blog/static/blog/post_content/machine-learning-notes-1b-model-selection-and-validation-the-no-free-lunch-theorem-and-the-curse-of-dimensionality/: cod_final.py  cod_one.py  cod_three.py  cod_two.py  cv.py  model_selection_poly_reg.py  test.py
blog/static/blog/post_content/machine-learning-notes-1c-frequentism-and-bayesianism/: different_priors.py  frequentist_likelihood.py  poly_reg_01.py  poly_reg_02.py  prior_a_b_2.py  test.py
blog/static/blog/post_content/machine-learning-notes-2-regression/: distribution.py  prob_linreg.py  prob_linreg_basis.py  prob_linreg_basis_regularization.py  prob_linreg_example.py  sse_minimum.py  test.py  weow.py
blog/static/blog/post_content/machine-learning-notes-3a-classification/: gaussians.py  gaussians_horizontal.py
blog/static/blog/post_content/machine-learning-notes-3b-generative-classifiers/: data.py
blog/static/blog/post_content/the-bare-minimum-guide-to-matplotlib/: histogram_plot.py  hists_plot.py  legend_plot.py  line_plots.py  linecolors_plot.py  (+6 more)
blog/templates/blog/: base.html  index.html  navigation.html  post.html  sidebar.html  social-icon.html
blog/templatetags/: markdown_extras.py  url_extras.py
cookiesite/: asgi.py  celery.py  db.sqlite3  entrypoint.sh  manage.py  settings.py
cookiesite/cookiesite/: settings.py  urls.py  wsgi.py
django-app/: .flake8  pyproject.toml
nginx/: nginx.conf
(+4 files in other folders)
