[tool.poetry]
name = "website"
version = "0.1.0"
description = ""
authors = ["cookieblues <cookieblues@outlook.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.16"
django = "^4.2"
psycopg2-binary = "^2.9.6"


[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = "django.*"
ignore_missing_imports = true
