[tool.poetry]
name = "website"
version = "0.1.0"
description = ""
authors = ["cookieblues <cookieblues@outlook.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.16"
django = "^4.2"
psycopg2-binary = "^2.9.6"
gunicorn = "^20.1.0"
markdown = "^3.4.3"
celery = {extras = ["redis"], version = "^5.2.7"}


[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''/(\.git|\.mypy_cache|\.venv|migrations)'''
line_length = 119

[tool.isort]
skip_glob = ["*migrations*"]
line_length = 119
include_trailing_comma = true
use_parentheses = true

[tool.mypy]
ignore_missing_imports = true
exclude = "(?x)(migrations|static)" # FIXME

[[tool.mypy.overrides]]
module = "django.*"
ignore_missing_imports = true
