[tool.poetry]
name = "django-app"
version = "0.1.0"
description = ""
authors = ["cookieblues <cookieblues@outlook.dk>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "3.11.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
